# video-ops

./: Cargo.toml  exhibits.yaml  other.yaml
src/: clip.rs  exhibits.yaml  main.rs  utils.rs  watermark.rs
test/: example.yaml
