[package]
name = "clipper"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "4.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
spinoff = "0.8.0"
clap = { version = "4.1.6", features = ["derive"] }
clap_derive = "4.1.0"
regex = "1.10.2"
